<resources>
    <string name="OK_Button_Text">OK</string>
    <string name="Cancel_Button_Text">Cancel</string>
    <string name="Error">Error</string>
    <string name="Successful">Operation completed!</string>
    <string name="Connection_Error">Connection error</string>

    <string name="app_name">TroublesGetAway</string>
    <string name="welcome_to_troubles_get_away">Welcome to Troubles Get Away!</string>
    <string name="invalidLoginParameters">Invalid username and/or password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_activity_comune_main">ComuneMainActivity</string>
    <string name="title_activity_utente_main">UtenteMainActivity</string>
    
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeated_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="state">City</string>
    <string name="register_button_label">REGISTER</string>

    <string name="missing_element">Missing data!</string>
    <string name="not_same_password_message">Passwords are not the same! Please check them.</string>
    <string name="already_existing_user">User already registered!Please choose another username.</string>
    <string name="registration_successful">User successfully registered! Proceed with the login.</string>

    <string name="other_radio">Other</string>
    <string name="hole_radio">Pothole</string>
    <string name="lamp_radio">Broken Lamp</string>
    <string name="trafficl_radio">Broken Traffic Lights</string>
    <string name="address">Address</string>
    <string name="type">Type</string>
    <string name="hazard">Hazard Estimation</string>
    <string name="high_radio">High</string>
    <string name="medium_radio">Medium</string>
    <string name="low_radio">Low</string>
    <string name="send_button">Send</string>

    <string name="register_button">Register</string>
    <string name="list_breakdowns">Breakdowns List</string>
    <string name="user_button">User Management</string>
    <string name="state_button">State Management</string>
    <string name="signal">Signal</string>
    <string name="my_breakdowns">My Breakdowns List</string>
    <string name="profile">My Profile</string>
    <string name="exit">Exit</string>
</resources>
