<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondoadmin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".admin.AdminMainActivity"
    tools:showIn="@layout/activity_admin_main">

    <Button
        android:id="@+id/btngestutenti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="77dp"
        android:backgroundTint="@color/colorButton0"
        android:fontFamily="@font/alike"
        android:text="@string/user_button"
        app:layout_constraintBottom_toTopOf="@+id/btngestcomuni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btngestcomuni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/colorButton0"
        android:fontFamily="@font/alike"
        android:text="@string/state_button"
        app:layout_constraintBottom_toTopOf="@+id/btnguasti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnguasti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorButton0"
        android:fontFamily="@font/alike"
        android:text="@string/list_breakdowns"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <Button
        android:id="@+id/btnannulla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="#00FFCCCB"
        android:fontFamily="@font/alike"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>